# cmake-tutorial

./: .gitignore  CMakeLists.txt  README.md  tutorial.cpp  tutorial_config.h.in
mathfunctions/: CMakeLists.txt  maketable.cpp  mathfunctions.h  mysqrt.cpp
